ingress-traefik/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-traefik
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-traefik
    app.kubernetes.io/part-of: ingress-traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.4
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: traefik
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-traefik
    app.kubernetes.io/part-of: ingress-traefik
