ingress-traefik/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik
  labels:
    name: ingress-traefik
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ingress-traefik
spec:
  podSelector: {}
  policyTypes:
  - Ingress
