ingress-traefik/04-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-traefik
      app.kubernetes.io/part-of: ingress-traefik
  ingress:
  - ports:
    - port: 80
    - port: 443
    - port: 8080
    from: []
